# llm-as-a-judge-api

./: .env.example  .gitignore  CLAUDE.md  GEMINI.md  README.md  REFACTORING_SUMMARY.md  deploy_helm.py  judge_models_test_results.json  pyproject.toml  requests.ipynb  test_pre_generated.py  test_robust_errors.py  test_timeout.py
.taskmaster/: state.json
.taskmaster/docs/: prd.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
deploy/: troubleshooting.md
deploy/docker/: .env.example  Dockerfile  Dockerfile-x64  README.md  docker-compose-x64.yml  docker-compose.override.yml  docker-compose.yml
deploy/helm/llm-judge-api/: Chart.yaml  README.md  values-dev.yaml  values-prod.yaml  values.yaml
deploy/helm/llm-judge-api/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
llm_as_ajudge_study.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: test_tracing.py
src/: README.md
src/laaj/: README.md  __init__.py
src/laaj/agents/: README.md  __init__.py  agents.py  llm_factory.py  llms.py
src/laaj/api/: README.md  __init__.py  main.py
src/laaj/api/core/: __init__.py
src/laaj/config/: README.md  __init__.py  config.py  models_loader.py
src/laaj/langsmith_integration/: README.md  __init__.py  client.py
src/laaj/workflow/: README.md  workflow.py  workflow_backup.py
src/llm_as_ajudge_study.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_judge_models.py  test_pyproject.py  teste_requests.py
(+10 files in other folders)
